--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/profilepiccc.jpg"  alt="" /></a>
-					<h1><strong>I am Mücahit</strong>,<br/> Junior SE Student<br />
-					Game Developer <br/> Intern<br/>
+					<h1><strong>I am Mücahit</strong>,<br/> iOS Developer<br />
+					Traveller <br/> Technology<br/>
 					<br />
 					Click <a href="https://www.linkedin.com/in/mucahiterenozkur/">here</a><br/> for my linkedin profile.</h1>
 				</div>
